# asterix-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: coverage.yml  main.yml
asterix-derive/: Cargo.toml
asterix-derive/src/: lib.rs
src/: custom_read_write.rs  data_item.rs  fourty_eight.rs  fspec.rs  lib.rs  modifier.rs  thirty_four.rs  types.rs
tests/: public_api.rs
