[package]
name = "asterix"
version = "0.3.0"
authors = ["wcampbell"]
edition = "2021"
categories = ["encoding", "parsing"]
keywords = ["asterix", "radar", "aviation", "network", "protocol"]
license = "MIT"
readme = "README.md"
description = "Encode/Decode for ASTERIX protocol using the deku library"
repository = "https://github.com/wcampbell0x2a/asterix-rs"

[workspace]
members = [
    "asterix-derive",
]

[dependencies]
deku = "0.15.0"
asterix-derive = { version = "^0.3.0", path = "asterix-derive" }
assert_hex = "0.2.1"
