[package]
name = "asterix"
version = "0.4.0"
authors = ["wcampbell"]
edition = "2021"
categories = ["encoding", "parsing"]
keywords = ["asterix", "radar", "aviation", "network", "protocol"]
license = "MIT"
readme = "README.md"
description = "Encode/Decode for ASTERIX protocol using the deku library"
repository = "https://github.com/wcampbell0x2a/asterix-rs"
rust-version = "1.70.0"

[workspace]
members = [
    "asterix-derive",
]

[dependencies]
asterix-derive = { version = "^0.4", path = "asterix-derive" }
deku = { git = "https://github.com/sharksforarms/deku", branch = "impl-writer"}
assert_hex = "0.4"
