[package]
name = "asterix-derive"
version = "0.4.0"
authors = ["wcampbell <wcampbell1995@gmail.com>"]
edition = "2021"
description = "proc-macro convenience with the deku library, for updating ASTERIX FSPECs"
readme = "../README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version = "2.0", features = ["full"]}#, features = ["extra-traits"]}
quote = "1.0"
proc-macro2 = "1.0"

[lib]
proc-macro = true
